--- a/src/app/todos/detail/detail.component.html
+++ b/src/app/todos/detail/detail.component.html
@@ -7,14 +7,14 @@
       <div class="col-xs-12">
         <img
           [src]="getFullImageUrl(todo.imageUrl)"
-          alt="{{ todo.name }}"
+          alt="{{ todo.title }}"
           class="img-responsive"
         />
       </div>
     </div>
     <div class="row">
       <div class="col-xs-12">
-        <h1>{{ todo.name }}</h1>
+        <h1>{{ todo.title }}</h1>
         <h4>{{ todo.description }}</h4>
       </div>
     </div>
