--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
+:root {
+  --primary-color: #3b9ae4;
+  --secondary-color: #52a8eb;
+}
+
 html,
 body {
   height: 100%;
@@ -81,18 +86,20 @@ a {
   height: auto;
   margin: 0;
   padding: 10px 26px;
-  border-radius: 10px !important;
+  border-radius: 6px !important;
   font-size: 16px;
   font-weight: 500;
-  text-transform: capitalize;
-  border: 1px solid var(--section-color);
-  color: var(--body-color) !important;
-  background-color: var(--section-color) !important;
+  display: flex;
+  gap: 8px;
+  align-items: center;
+  color: white !important;
+  border: 1px solid var(--primary-color);
+  background-color: var(--primary-color) !important;
 }
 .fc-button.fc-button-primary:hover,
 .fc-button.fc-button-primary.fc-button-active {
-  border-color: var(--primary-color) !important;
-  background: var(--primary-color-transparent) !important;
+  border-color: var(--secondary-color) !important;
+  background: var(--secondary-color) !important;
 }
 .fc-button.fc-button-primary:focus,
 .fc-button.fc-button-primary.fc-button-active:focus {
@@ -107,6 +114,7 @@ a {
   .fc-next-button:before {
   display: none;
 }
+
 .sidebar__header {
   border-bottom: 1px solid #ddd;
   text-align: center;
@@ -150,5 +158,41 @@ a {
   color: #fff !important;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+.inputField {
+  box-shadow: 0px 0px 9px 0px rgb(0, 0, 0, 0.1) inset;
+  margin-top: 5px;
+}
+
+.submitContainer {
+  display: flex;
+  gap: 10px;
+  width:100%;
+  margin-top: 20px;
+  padding-top: 20px;
+  border-top:1px solid #ddd
+}
+
+.formContainer {
+  width: 100%;
+  max-width: 1200px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2%;
+}
+
+.inputContainer {
+  width: 49%;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.inputContainerFull {
+  width: 100%;
+}
+
+.spacer{
+  margin-top: 20px;
+  padding-top: 20px;
+  border-top:1px solid #ddd
+}
