--- a/src/app/todos/row/row.component.html
+++ b/src/app/todos/row/row.component.html
@@ -10,7 +10,7 @@
         <div class="content__todo__list__single">
           <div class="content__todo__list__single__text">
             <span class="content__todo__list__single__subtitle">{{
-              todo.createdAt
+              formatDate(todo.createdAt)
             }}</span>
             <h4 class="content__todo__list__single__title">{{ todo.title }}</h4>
           </div>
