--- a/src/app/todos/new/new.component.html
+++ b/src/app/todos/new/new.component.html
@@ -26,7 +26,7 @@
           type="text"
           id="title"
           formControlName="title"
-          class="form-control inputField"
+          class="form-control inputField inputField2"
         />
       </div>
 
