--- a/src/app/todos/categories/category-edit/category-edit.component.html
+++ b/src/app/todos/categories/category-edit/category-edit.component.html
@@ -29,14 +29,33 @@
         </div>
 
         <div class="inputContainer inputContainerFull">
-          <label for="description" class="labelText">Description</label>
-          <textarea
-            type="text"
-            id="description"
-            class="inputField"
-            formControlName="description"
-            rows="6"
-          ></textarea>
+          <label for="color" class="labelText">Color</label>
+          <div class="flexRow">
+            <input
+              type="color"
+              id="color"
+              [(ngModel)]="category.color"
+              formControlName="color"
+              class="form-control inputField inputFieldColor"
+            />
+            <p class="mt-3">Selected color: {{ category.color }}</p>
+          </div>
+        </div>
+  
+        <div class="inputContainer inputContainerFull">
+          <label for="color" class="labelText">Icon</label>
+  
+          <div class="iconContainer">
+            <label *ngFor="let icon of icons">
+              <input
+                type="radio"
+                name="icon"
+                formControlName="icon"
+                [value]="icon"
+              />
+              <mat-icon>{{ icon }}</mat-icon>
+            </label>
+          </div>
         </div>
 
         <div class="submitContainer">
