--- a/src/app/todos/categories/category-new/category-new.component.html
+++ b/src/app/todos/categories/category-new/category-new.component.html
@@ -8,6 +8,8 @@
       Back
     </button>
 
+    <div class="spacer"></div>
+
     <form
       *ngIf="categoryForm"
       [formGroup]="categoryForm"
@@ -20,19 +22,38 @@
           type="text"
           id="name"
           formControlName="name"
-          class="inputField"
+          class="form-control inputField"
         />
       </div>
 
       <div class="inputContainer inputContainerFull">
-        <label for="description" class="labelText">Description</label>
-        <textarea
-          type="text"
-          id="description"
-          class="inputField"
-          formControlName="description"
-          rows="6"
-        ></textarea>
+        <label for="color" class="labelText">Color</label>
+        <div class="flexRow">
+          <input
+            type="color"
+            id="color"
+            [(ngModel)]="selectedColor"
+            formControlName="color"
+            class="form-control inputField inputFieldColor"
+          />
+          <p class="mt-3">Selected color: {{ selectedColor }}</p>
+        </div>
+      </div>
+
+      <div class="inputContainer inputContainerFull">
+        <label for="color" class="labelText">Icon</label>
+
+        <div class="iconContainer">
+          <label *ngFor="let icon of icons">
+            <input
+              type="radio"
+              name="icon"
+              formControlName="icon"
+              [value]="icon"
+            />
+            <mat-icon>{{ icon }}</mat-icon>
+          </label>
+        </div>
       </div>
 
       <div class="submitContainer">
