--- a/src/app/todos/categories/categories.component.css
+++ b/src/app/todos/categories/categories.component.css
@@ -19,8 +19,16 @@
 }
 
 .listRow {
+  display: flex;
+  align-items: center;
+  padding: 12px 4px;
+  width:99%;
+  margin:0 auto;
   margin-bottom: 0px !important;
-  box-shadow: 0px 1px 2px 0px rgb(0, 0, 0, 0.2);
+}
+
+.listRow:nth-child(odd) {
+  background-color: #f9f9f9;
 }
 
 .listRow > div {
@@ -28,12 +36,11 @@
 }
 
 .listRow > div:nth-child(1) {
-  width: 80%;
+  width: 78%;
   text-align: left;
   padding-left: 18px;
   align-items: center;
   display: flex;
-  min-height: 50px;
 }
 
 .listRow > div:nth-child(2) {
@@ -42,22 +49,13 @@
   justify-content: center;
   align-items: center;
   display: flex;
-  min-height: 50px;
-  margin-left: auto;
-}
-
-.categoryContainer {
-  width: 100%;
-  height: 30px;
-  font-weight: bold;
-  color: #fff;
-  font-size: 18px;
-  padding: 4px 10px;
-  overflow: hidden;
+  gap: 6px;
 }
 
 .listBody {
-  padding-top: 6px;
+  display: flex;
+  gap:10px;
+  align-items: center;
 }
 
 .listTitle {
