--- a/src/app/todos/categories/category-edit/category-edit.component.html
+++ b/src/app/todos/categories/category-edit/category-edit.component.html
@@ -1,15 +1,15 @@
-<h5>
-  Todos > Categories > Edit >
-  <span>{{ category?.name || "" }}</span>
-</h5>
-<hr />
-
 <mat-card class="pageCard">
   <mat-card-content>
-    <button type="button" class="buttonBase buttonBack" (click)="onBack()">
+    <button
+      type="button"
+      class="fc-button fc-button-primary"
+      (click)="onBack()"
+    >
       <mat-icon> chevron_left</mat-icon>
       Back
     </button>
+
+    <div class="spacer"></div>
 
     <div *ngIf="category$ | async as category; else loading">
       <form
@@ -24,7 +24,7 @@
             type="text"
             id="name"
             formControlName="name"
-            class="inputField"
+            class="form-control inputField"
           />
         </div>
 
@@ -41,10 +41,10 @@
             <p class="mt-3">Selected color: {{ category.color }}</p>
           </div>
         </div>
-  
+
         <div class="inputContainer inputContainerFull">
           <label for="color" class="labelText">Icon</label>
-  
+
           <div class="iconContainer">
             <label *ngFor="let icon of icons">
               <input
@@ -61,7 +61,7 @@
         <div class="submitContainer">
           <button
             type="button"
-            class="buttonBase buttonCancel"
+            class="fc-button fc-button-primary"
             (click)="onCancel()"
           >
             Cancel
@@ -69,7 +69,7 @@
 
           <button
             type="submit"
-            class="buttonBase"
+            class="fc-button fc-button-primary"
             [disabled]="!categoryForm.valid"
           >
             <mat-icon>save</mat-icon>
